--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,9 @@ commands = pytest --cov=beamlime --cov-report html:coverage_html/python {posargs
 
 [testenv:nightly]
 deps = -r requirements/nightly.txt
+setenv =
+  PIP_INDEX_URL = https://pypi.anaconda.org/scipp-nightly-wheels/simple
+  PIP_EXTRA_INDEX_URL = https://pypi.org/simple
 commands = pytest {posargs} --large-file-test
 
 [testenv:unpinned]
