--- a/requirements/nightly.in
+++ b/requirements/nightly.in
@@ -5,6 +5,7 @@ PyYAML
 confluent_kafka
 ess-streaming-data-types
 jinja2
+pydantic>=2
 pytest
 scipp
 --index-url=https://pypi.anaconda.org/scipp-nightly-wheels/simple/
