--- a/tox.ini
+++ b/tox.ini
@@ -71,4 +71,4 @@ deps =
 skip_install = true
 changedir = requirements
 commands = python ./make_base.py --nightly scipp,sciline,plopp,essreduce
-           pip-compile-multi -d . --backtracking
+           pip-compile-multi -d . --backtracking --annotate-index
