--- a/src/beamlime/config/defaults/kafka_downstream_dev.yaml
+++ b/src/beamlime/config/defaults/kafka_downstream_dev.yaml
@@ -1,1 +1,3 @@
 bootstrap.servers: localhost:9092
+message.max.bytes: 20971520  # 20MB max message size
+queue.buffering.max.kbytes: 104857600  # 100MB max local buffer size
