Add essspectroscopy as test dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dynamic = ["version"]
 [project.optional-dependencies]
 test = [
     "pytest",
+    "essspectroscopy @ git+https://github.com/scipp/essspectroscopy.git@main",
 ]
 dashboard = [
   "dash",
