Add bifrost extra deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ test = [
     "pytest",
     "essspectroscopy @ git+https://github.com/scipp/essspectroscopy.git@main",
 ]
+bifrost = [
+    "essspectroscopy @ git+https://github.com/scipp/essspectroscopy.git@main",
+]
 dashboard = [
   "dash",
   "gunicorn",
