--- a/requirements/nightly.in
+++ b/requirements/nightly.in
@@ -9,6 +9,7 @@ pydantic>=2
 pooch
 pytest
 essspectroscopy @ git+https://github.com/scipp/essspectroscopy.git@main
+pytest-benchmark
 scipp
 --index-url=https://pypi.anaconda.org/scipp-nightly-wheels/simple/
 --extra-index-url=https://pypi.org/simple
