move requirements to docs from basetest

--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -11,3 +11,7 @@ sphinx-copybutton
 sphinx-design
 ipympl
 pythreejs
+pandas
+plopp
+pyarrow  # Future hard-dependency of pandas, it can be removed from pandas>3.0
+psutil
