Fix up conda build

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -23,7 +23,7 @@ requirements:
 
   {# Conda does not allow spaces between package name and version, so remove them #}
   {% for package in dependencies %}
-    - {% if package == "graphviz" %}python-graphviz{% else %}{{ package|replace(" ", "") }}{% endif %}
+    - {% if package == "confluent_kafka" %}python-confluent-kafka{% else %}{{ package|replace(" ", "") }}{% endif %}
   {% endfor %}
 
 
