Need to have clean deps for wheels too

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ test = [
     "pytest-benchmark",
 ]
 bifrost = [
-    "essspectroscopy @ git+https://github.com/scipp/essspectroscopy.git@main",
+    "essspectroscopy",
 ]
 dashboard = [
   "dash",
