--- a/src/beamlime/config/defaults/raw_data_consumer.yaml
+++ b/src/beamlime/config/defaults/raw_data_consumer.yaml
@@ -1,5 +1,6 @@
 auto.offset.reset: latest
 enable.auto.commit: true
 fetch.min.bytes: 1
-session.timeout.ms: 6000
-heartbeat.interval.ms: 2000
+fetch.max.bytes: 200000000  # might need at least 10x this in RAM for processing
+session.timeout.ms: 30000
+heartbeat.interval.ms: 10000  # long so we do not timeout when processing large data
