Add `param` test dep, removedo utdated test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ test = [
     "essdiffraction>=25.06.0",
     "esssans",
     "essspectroscopy>=25.05.0",
+    "param",
     "pytest",
     "pytest-benchmark",
 ]
