Remove old dashboard, update docs and add entry points

--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -167,11 +167,11 @@ services:
       KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
     command: sh -c "python -m pip install -e . && python -m beamlime.services.detector_data --instrument $BEAMLIME_INSTRUMENT"
 
-  dashboard:
+  monitors-dashboard:
     profiles:
       - monitor
     image: python:3.12
-    container_name: dashboard
+    container_name: monitors-dashboard
     depends_on:
       init-kafka:
         condition: service_completed_successfully
@@ -181,7 +181,7 @@ services:
       - .:/app
     working_dir: /app
     ports:
-      - "8000:8000"
+      - "5007:5007"
     environment:
       BEAMLIME_ENV: docker
       BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
@@ -195,4 +195,34 @@ services:
       KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e .[dashboard] && gunicorn beamlime.services.wsgi:application -b 0.0.0.0:8000"
+    command: sh -c "python -m pip install -e .[dashboard] && gunicorn beamlime.dashboard.monitors_wsgi:application -b 0.0.0.0:5007"
+
+  reduction-dashboard:
+    profiles:
+      - reduction
+    image: python:3.12
+    container_name: reduction-dashboard
+    depends_on:
+      init-kafka:
+        condition: service_completed_successfully
+      kafka:
+        condition: service_healthy
+    volumes:
+      - .:/app
+    working_dir: /app
+    ports:
+      - "5009:5009"
+    environment:
+      BEAMLIME_ENV: docker
+      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
+      KAFKA2_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA2_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
+    command: sh -c "python -m pip install -e .[dashboard] && gunicorn beamlime.dashboard.reduction_wsgi:application -b 0.0.0.0:5009"
