Add instructions fro running DREAM demo

--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -16,6 +16,8 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
+    volumes:
+      - ./scripts:/scripts
     environment:
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: false
       KAFKA_BROKER_ID: 1
