--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -28,6 +28,11 @@ services:
       KAFKA_NUM_RECOVERY_THREADS_PER_DATA_DIR: 1
       KAFKA_NUM_NETWORK_THREADS: 2
       KAFKA_NUM_IO_THREADS: 4
+      # KRaft-specific timeout adjustments
+      KAFKA_CONTROLLER_SOCKET_TIMEOUT_MS: 30000
+      KAFKA_CONTROLLER_REQUEST_TIMEOUT_MS: 30000
+      KAFKA_METADATA_MAX_IDLE_INTERVAL_MS: 500
+      # Reduce log retention for development
       KAFKA_SOCKET_SEND_BUFFER_BYTES: 104857600
       KAFKA_SOCKET_RECEIVE_BUFFER_BYTES: 104857600
       KAFKA_SOCKET_REQUEST_MAX_BYTES: 104857600
@@ -47,7 +52,7 @@ services:
       KAFKA_FETCH_MESSAGE_MAX_BYTES: 20971520    # 20MB
       KAFKA_MAX_REQUEST_SIZE: 20971520           # 20MB
       KAFKA_MAX_PARTITION_FETCH_BYTES: 20971520  # 20MB
-    mem_limit: 1G
+    mem_limit: 2G
     healthcheck:
       test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
       interval: 30s
