Increase some Kafka message size limits
Should help somewhat with large/many reduced data items, but it does not
seem to fully resolve the issues I was observing (dashboard consumer
falling behind).

--- a/src/beamlime/config/defaults/reduced_data_consumer.yaml
+++ b/src/beamlime/config/defaults/reduced_data_consumer.yaml
@@ -3,3 +3,4 @@ enable.auto.commit: true
 fetch.min.bytes: 1
 session.timeout.ms: 6000
 heartbeat.interval.ms: 2000
+max.partition.fetch.bytes: 104857600
