--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -40,18 +40,18 @@ services:
       # Memory settings
       KAFKA_HEAP_OPTS: "-Xmx1G -Xms1G"
       # Disk usage limits
-      KAFKA_LOG_RETENTION_BYTES: 536870912  # 512MB total retention
+      KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1GB total retention
       KAFKA_LOG_RETENTION_HOURS: 1           # Keep logs for 1 hours
       KAFKA_LOG_SEGMENT_BYTES: 134217728     # 128MB per segment
       KAFKA_LOG_CLEANUP_POLICY: delete       # Delete old segments
       KAFKA_LOG_CLEANER_MIN_CLEANABLE_RATIO: 0.5
       KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 300000  # Check every 5 minutes
-      KAFKA_MESSAGE_MAX_BYTES: 20971520          # 20MB
-      KAFKA_REPLICA_FETCH_MAX_BYTES: 20971520    # 20MB
-      KAFKA_REPLICA_SOCKET_RECEIVE_BUFFER_BYTES: 20971520
-      KAFKA_FETCH_MESSAGE_MAX_BYTES: 20971520    # 20MB
-      KAFKA_MAX_REQUEST_SIZE: 20971520           # 20MB
-      KAFKA_MAX_PARTITION_FETCH_BYTES: 20971520  # 20MB
+      KAFKA_MESSAGE_MAX_BYTES: 104857600          # 100MB
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 104857600    # 100MB
+      KAFKA_REPLICA_SOCKET_RECEIVE_BUFFER_BYTES: 104857600
+      KAFKA_FETCH_MESSAGE_MAX_BYTES: 104857600    # 100MB
+      KAFKA_MAX_REQUEST_SIZE: 104857600           # 100MB
+      KAFKA_MAX_PARTITION_FETCH_BYTES: 104857600  # 100MB
     mem_limit: 2G
     healthcheck:
       test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
