deps: add holoviews to test deps + tox -e deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ test = [
     "pytest",
     "pytest-benchmark",
     "scippneutron>=25.07.0",
+    "holoviews",
 ]
 bifrost = [
     "essspectroscopy",
