--- a/requirements/nightly.in
+++ b/requirements/nightly.in
@@ -13,6 +13,7 @@ essspectroscopy>=25.05.0
 param
 pytest
 pytest-benchmark
+holoviews
 scipp
 --index-url=https://pypi.anaconda.org/scipp-nightly-wheels/simple/
 --extra-index-url=https://pypi.org/simple
