--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{310,311,312}
+envlist = py311
 isolated_build = true
 
 [testenv]
@@ -72,5 +72,5 @@ deps =
   pip==24.2
 skip_install = true
 changedir = requirements
-commands = python ./make_base.py --nightly scipp,sciline,plopp,essreduce
+commands = python ./make_base.py --nightly scipp,sciline,essreduce
            pip-compile-multi -d . --backtracking --annotate-index
