--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -1,5 +1,5 @@
 -r base.in
--r basetest.in
+autodoc-pydantic
 ipykernel
 ipython!=8.7.0  # Breaks syntax highlighting in Jupyter code cells.
 myst-parser
