ILL test for NMX adjustment.

--- a/src/beamlime/config/defaults/kafka_downstream_dev.yaml
+++ b/src/beamlime/config/defaults/kafka_downstream_dev.yaml
@@ -1,3 +1,4 @@
 bootstrap.servers: localhost:9092
+security.protocol: PLAINTEXT
 message.max.bytes: 100971520  # 100MB max message size
 queue.buffering.max.kbytes: 104857600  # 100MB max local buffer size
