--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
   "scipp>=25.02.0",  # Improved performance of scipp.group
   "scippneutron>=25.07.0",  # For DREAM unit conversion fixes
   "pooch",
+  "holoviews",
 ]
 
 dynamic = ["version"]
