--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ isolated_build = true
 deps = -r requirements/test.txt
 setenv =
   JUPYTER_PLATFORM_DIRS = 1
-commands = pytest --cov=beamlime --cov-report html:coverage_html/python {posargs}
+commands = pytest {posargs}
 
 [testenv:nightly]
 deps = -r requirements/nightly.txt
@@ -19,26 +19,22 @@ commands = pytest {posargs}
 description = Test with unpinned dependencies, as a user would install now.
 deps =
   -r requirements/basetest.txt
-  beamlime
-commands = pytest {posargs}
-
-[testenv:plugin]
-deps = -r requirements/plugin.txt
+  esslivedata
 commands = pytest {posargs}
 
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
 deps = -r requirements/docs.txt
 allowlist_externals=find
-commands = python -m sphinx -j2 -v -b html -d {toxworkdir}/docs_doctrees docs html
-           python -m sphinx -j2 -v -b doctest -d {toxworkdir}/docs_doctrees docs html
+commands = python -m sphinx -W -j2 -v -b html -d {toxworkdir}/docs_doctrees docs html
+           python -m sphinx -W -j2 -v -b doctest -d {toxworkdir}/docs_doctrees docs html
            find html -type f -name "*.ipynb" -not -path "html/_sources/*" -delete
 
 [testenv:releasedocs]
 description = invoke sphinx-build to build the HTML docs from a released version
 skip_install = true
 deps =
-  beamlime=={posargs}
+  esslivedata=={posargs}
   {[testenv:docs]deps}
 allowlist_externals={[testenv:docs]allowlist_externals}
 commands = {[testenv:docs]commands}
