--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "beamlime"
+name = "esslivedata"
 description = "Live data reduction visualisation framework for ESS."
 authors = [{ name = "Scipp contributors" }]
 license = "BSD-3-Clause"
@@ -74,9 +74,9 @@ dashboard = [
 beamlime-make-geometry-nexus = "beamlime.scripts.make_geometry_nexus:main"
 
 [project.urls]
-"Bug Tracker" = "https://github.com/scipp/beamlime/issues"
-"Documentation" = "https://scipp.github.io/beamlime"
-"Source" = "https://github.com/scipp/beamlime"
+"Bug Tracker" = "https://github.com/scipp/esslivedata/issues"
+"Documentation" = "https://scipp.github.io/esslivedata"
+"Source" = "https://github.com/scipp/esslivedata"
 
 [tool.setuptools_scm]
 
@@ -93,7 +93,6 @@ addopts = """
 testpaths = "tests"
 filterwarnings = [
   "error",
-  'ignore:\n.*Sentinel is not a public part of the traitlets API.*:DeprecationWarning',
 ]
 pythonpath = "tests"
 
@@ -113,7 +112,7 @@ ignore = [
     "COM812", "COM819", "D206", "D300", "E111", "E114", "E117", "ISC001", "ISC002", "Q000", "Q001", "Q002", "Q003", "W191",
 ]
 fixable = ["B010", "I001", "PT001", "RUF022"]
-isort.known-first-party = ["beamlime"]
+isort.known-first-party = ["ess.livedata"]
 pydocstyle.convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
