Pass docs build

--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -9,3 +9,12 @@ sphinx
 sphinx-autodoc-typehints
 sphinx-copybutton
 sphinx-design
+sphinxcontrib-mermaid
+# For old performance reports
+ipympl
+pythreejs
+pandas
+plopp
+pyarrow  # Future hard-dependency of pandas, it can be removed from pandas>3.0
+psutil
+# End of old performance reports
