--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -1,4 +1,4 @@
-name: beamlime-kafka
+name: livedata-kafka
 services:
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -85,7 +85,7 @@ services:
         condition: service_healthy
     volumes:
       - ./scripts:/scripts
-    command: ["sh", "/scripts/setup-kafka-topics.sh", "${BEAMLIME_INSTRUMENT:-dummy}"]
+    command: ["sh", "/scripts/setup-kafka-topics.sh", "${LIVEDATA_INSTRUMENT:-dummy}"]
 
   fake-monitors:
     profiles:
@@ -101,14 +101,14 @@ services:
       - .:/app
     working_dir: /app
     environment:
-      BEAMLIME_ENV: docker
-      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      LIVEDATA_ENV: docker
+      LIVEDATA_INSTRUMENT: ${LIVEDATA_INSTRUMENT:-dummy}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
       KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_monitors --mode ev44 --instrument $BEAMLIME_INSTRUMENT"
+    command: sh -c "python -m pip install -e . && python -m ess.livedata.services.fake_monitors --mode ev44 --instrument $LIVEDATA_INSTRUMENT"
 
   fake-detectors:
     profiles:
@@ -124,14 +124,14 @@ services:
       - .:/app
     working_dir: /app
     environment:
-      BEAMLIME_ENV: docker
-      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      LIVEDATA_ENV: docker
+      LIVEDATA_INSTRUMENT: ${LIVEDATA_INSTRUMENT:-dummy}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
       KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_detectors --instrument $BEAMLIME_INSTRUMENT"
+    command: sh -c "python -m pip install -e . && python -m ess.livedata.services.fake_detectors --instrument $LIVEDATA_INSTRUMENT"
 
   monitor-data:
     profiles:
@@ -147,8 +147,8 @@ services:
       - .:/app
     working_dir: /app
     environment:
-      BEAMLIME_ENV: docker
-      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      LIVEDATA_ENV: docker
+      LIVEDATA_INSTRUMENT: ${LIVEDATA_INSTRUMENT:-dummy}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
       KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
@@ -159,7 +159,7 @@ services:
       KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e . && python -m beamlime.services.monitor_data --instrument $BEAMLIME_INSTRUMENT"
+    command: sh -c "python -m pip install -e . && python -m ess.livedata.services.monitor_data --instrument $LIVEDATA_INSTRUMENT"
 
   detector-data:
     profiles:
@@ -175,8 +175,8 @@ services:
       - .:/app
     working_dir: /app
     environment:
-      BEAMLIME_ENV: docker
-      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      LIVEDATA_ENV: docker
+      LIVEDATA_INSTRUMENT: ${LIVEDATA_INSTRUMENT:-dummy}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
       KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
@@ -187,7 +187,7 @@ services:
       KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e . && python -m beamlime.services.detector_data --instrument $BEAMLIME_INSTRUMENT"
+    command: sh -c "python -m pip install -e . && python -m ess.livedata.services.detector_data --instrument $LIVEDATA_INSTRUMENT"
 
   monitors-dashboard:
     profiles:
@@ -205,8 +205,8 @@ services:
     ports:
       - "5007:5007"
     environment:
-      BEAMLIME_ENV: docker
-      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      LIVEDATA_ENV: docker
+      LIVEDATA_INSTRUMENT: ${LIVEDATA_INSTRUMENT:-dummy}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
       KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
@@ -217,7 +217,7 @@ services:
       KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e .[dashboard] && gunicorn beamlime.dashboard.monitors_wsgi:application -b 0.0.0.0:5007"
+    command: sh -c "python -m pip install -e .[dashboard] && gunicorn ess.livedata.dashboard.monitors_wsgi:application -b 0.0.0.0:5007"
 
   reduction-dashboard:
     profiles:
@@ -235,8 +235,8 @@ services:
     ports:
       - "5009:5009"
     environment:
-      BEAMLIME_ENV: docker
-      BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
+      LIVEDATA_ENV: docker
+      LIVEDATA_INSTRUMENT: ${LIVEDATA_INSTRUMENT:-dummy}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
       KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
@@ -247,4 +247,4 @@ services:
       KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e .[dashboard] && gunicorn beamlime.dashboard.reduction_wsgi:application -b 0.0.0.0:5009"
+    command: sh -c "python -m pip install -e .[dashboard] && gunicorn ess.livedata.dashboard.reduction_wsgi:application -b 0.0.0.0:5009"
