Add panel as test dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ test = [
     "essdiffraction>=25.08.0",
     "esssans",
     "essspectroscopy>=25.05.0",
+    "panel",
     "param",
     "pytest",
     "pytest-benchmark",
